--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,52 @@
-name: Deploy site to GitHub Pages
+name: Deploy Frontend
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    branches: [main]
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+  contents: write
 
 jobs:
-  deploy:
+  # Build web and upload the artifact.
+  build_web:
+    runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+    - uses: actions/checkout@v3
+
+    # Install pnpm
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 7.17.1
+        run_install: false
+
+    # Install deps and build.
+    - run: pnpm install
+    - run: CI= pnpm build
+
+    # Upload the artifact.
+    - uses: actions/upload-pages-artifact@v1
+      with:
+        path: frontend/build
+
+
+  # Deploy web using the artifact from the previous job.
+  deploy_web:
+    runs-on: ubuntu-latest
+    needs: [build_web]
+    concurrency: ci-${{ github.ref }}
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v2
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+    - uses: actions/configure-pages@v1
+    - id: deployment
+      uses: actions/deploy-pages@v1
 
